@@ -1,3 +1,9 @@
+2018-07-30  Tom Tromey  <tom@tromey.com>
+
+	* record-btrace.c (get_thread_current_frame_id): Rename from
+	get_thread_current_frame.  Return a frame_id.
+	(record_btrace_start_replaying): Update.
+
 2018-10-19  Tom Tromey  <tom@tromey.com>
 
 	* symfile.c (reread_symbols): Clear "static_links".
